--- a/siege.conf
+++ b/siege.conf
@@ -25,7 +25,7 @@ proxy-port = 8080
 #
 # ex: verbose = true|false
 #
-verbose = true
+verbose = false
 
 #
 # Color mode: This option works in conjuction with verbose mode. 
