removed proxy from config

--- a/siege.conf
+++ b/siege.conf
@@ -11,8 +11,8 @@
 # PROXY = proxy.joedog.org
 # Reference variables inside ${} or $(), example: 
 #
-proxy-host = 10.0.1.249
-proxy-port = 8080
+# proxy-host = 10.0.1.249
+# proxy-port = 8080
 #
 # You can also reference ENVIRONMENT variables without actually 
 # declaring them, example:
